--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -4,7 +4,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank">世界各地景点上 那些中国人的故事</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/313042_medium-150x120.jpg" align ="left"></a>有这样一群信仰“真、善、忍”的人们，他们遍布于世界各地，长年坚守在著名的风景点。他们的信息台、展板、横幅形成一道道独特的“风景点”，吸引了成千上万的大陆游客。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 10:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/11/n11513087.md#1" target="_blank">每日三退声明精选（2019/09/10）</a><br></h3>我有六十多年的党龄，共产党打黑是越打越黑，那些党员都是用钱买来的，和居委会是一伙的，现在还是好人受欺压，我声明退出共产党的一切组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 11:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/10/n11510861.md#1" target="_blank">每日三退声明精选（2019/09/09）</a><br></h3>中共自篡政以来，大搞阶级斗争、大搞无神论、残害百姓，将中华民族神传文化败坏贻尽；它口是心非，阳奉阴违；它以国民为敌，用十四亿国民为人质，搞全球扩张。贻害无穷。因此，我们声明退出其党、团、队组织，回归神指引的光明大道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 11:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/9/n11508926.md#1" target="_blank">参考资料：纵观天下（2019年9月传单/传真）</a><br></h3>国际惩治新规 震慑迫害者 瑞士景点中国游客喜三退 骗人的人权伪装 非法迫害下 教师们的悲惨遭遇 一场引人深思的答辩 红朝末日败象显 人心思变难回天 声明退团退队......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月09日 3:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/8/n11506549.md#1" target="_blank">每日三退声明精选（2019/09/07）</a><br></h3>步入中壮年，经历了经济高速发展时期，感受了全社会贯穿上下的彻底的腐败与道德急速堕落，而作为微小的个人却完全无能为力，坚持洁身自好都很难。人们都清楚的知道世风日下的根源就是掌控国家的权贵们，是这个建立在歪理邪说基础上的流氓党。因此，我为自己误入其中而愧悔，其党垮亡也将是必然，相信这一天会很快来到。在此本人严正声明：退出中共党团队，做中华儿女，决不做马列子孙。愿.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月08日 11:23 AM							</td></tr>
