--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722727.md#1" target="_blank">前中共处级干部为何穿过三国边境逃出中国</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722727.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-zhangyijie-150x120.jpg" align ="left"></a>曾在中国（中共）国务院对外经贸部担任处级干部的张亦洁在研讨会上发言。张亦洁讲述了中共开始对法轮功的打压之后，她因为不放弃信仰，被撤销党、政职务，遭到七次非法绑架，期间受过几十种酷刑折磨……她最后被迫穿越三国边境、逃离中国的经历。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718825.md#1" target="_blank">追查国际主席：中共奴工产业危害美国及世界</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718825.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a-1-150x120.jpg" align ="left"></a>12月10日是国际人权日，“全球反迫害制止中共暴行、声援退党大潮”研讨会在美国国会举行。追查国际（追查迫害法轮功国际组织，WOIPFG）主席汪志远在研讨会上发言，题为《中共奴工产业对美国及世界的危害》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722813.md#1" target="_blank">中共地方官媒自曝公安局长入股涉黄场所</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722813.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/492e7625de70ee4a4531ee7b9109b73e-150x120.jpg" align ="left"></a>中共政法系统官员不但贪腐，充当黑社会的保护伞，而且有的甚至投资入股涉黄场所、分红。中共地方官媒质疑，执法者监守自盗，还有公平正义可言吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722925.md#1" target="_blank">莱特希泽：谈判中最难的是达成第一份协议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722925.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1150582670-150x120.jpg" align ="left"></a>在长达十几个月的贸易谈判后，美中政府周五（12月13日）宣布达成第一阶段协议。尽管这个协议以中方增加对美国产品的购买为主导，结构性改革等最棘手问题留到下一阶段谈，但美国贸易代表莱特希泽表示，达成第一份协议才是最困难的事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723512.md#1" target="_blank">烟台银行前董事长涉受贿罪被起诉</a><br></h3>12月12日，中共烟台市纪委监委网站发布通报称，烟台银行原党委书记、董事长叶文君被开除党籍，将其涉嫌犯罪问题移送检察机关依法审查起诉。这已经是烟台银行第三个落马的董事长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723449.md#1" target="_blank">陕西工人遭欠薪申请仲裁 人社局称人手不足拒绝</a><br></h3>陕西榆林子洲县三丰油脂公司讨薪工人到当地人社局申请仲裁，却收到劳动争议仲裁厅“人员不够，不受理案件”的回复文书，近日，这份半年前开出的“不予受理案件通知书”在网上曝光，引发争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 3:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723514.md#1" target="_blank">山西女子修脚店拔肉刺被收费4.6万元</a><br></h3>近日，山西孝义市民郭先生的妻子因脚底长肉刺去修脚店治疗，拔一根肉刺10元，最后竟花费4.66万元。郭先生怀疑被骗，店主称拔出后当场数，至于是不是拔出4660根则不清楚。最后经调解，店方退回4万多元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723409.md#1" target="_blank">西安男子喝没煮熟豆浆致食物中毒</a><br></h3>陕西西安市民张先生经常会在公司附近一家早餐店吃早饭。12月13日，他喝了一碗豆浆后不久便开始头昏想吐、眼睛看不清东西，后来意识到可能是喝了没煮熟的豆浆导致食物中毒。有专家表示，生豆浆里含有植物红细胞凝集素、皂苷等成分，确实可能会引起中毒现象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 1:05 PM							</td></tr>
