--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -15,7 +15,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712692.md#1" target="_blank">大陆影视业陷寒冬 今年有3228家公司消失</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111171140403-600x400-150x120.jpg" align ="left"></a>大陆影视产业正在遭遇寒冬，明星和演员也不得不“被迫冬眠”。陆媒披露，2019年以来共有超过3228家影视的公司消失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 3:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711556.md#1" target="_blank">疑遭疲劳审讯 黑龙江一医院副院长自杀未遂</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711556.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0-150x120.jpg" align ="left"></a>黑龙江齐齐哈尔民营建华医院与大股东发生纠纷，黑龙江、浙江警方先后介入其中。建华医院副院长刘岩疑遭浙江警方多次长时间传唤，在北京就医时用水果刀刺穿腹部，所幸被及时发现，自杀未遂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 3:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710931.md#1" target="_blank">涉作弊丑闻 俄无缘2020奥运和2022世界杯</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710931.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1187376851-150x120.jpg" align ="left"></a>周一（12月9日），“世界反兴奋剂组织”（World Anti-Doping Agency，缩写为WADA）一致同意，在四年内，俄罗斯将被禁止参加重大的国际体育比赛，尤其是奥运会和世界杯比赛。原因是该国违反兴奋剂相关规定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709125.md#1" target="_blank">加国前外交官被中共关押一年 待遇恶劣</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Kang-5-150x120.jpg" align ="left"></a>12月10日，是加拿大前外交官康明凯（Michael Kovrig）和加拿大商人斯帕沃尔（Michael Spavor）被中共关押一周年的日子。康明凯是国际危机组织的高级顾问，该组织主席罗伯特．马利（Robert Malley）称，康明凯在关押期间待遇恶劣。相对于孟晚舟保释期间住豪宅的待遇，他希望康明康能受到公正对待。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720497.md#1" target="_blank">山东一男子持刀伤人 致2死1伤</a><br></h3>12月11日晚山东济宁发生一起持刀伤人案件，3名受害者中2人身亡，另外1人受伤，嫌疑人逃离现场后畏罪自杀，被送往医院抢救。经初查，嫌疑人与其中1名受害者有感情纠纷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719825.md#1" target="_blank">每日三退声明精选（2019/12/12）</a><br></h3>自从今年年初我出国时偶然观看了由神韵艺术团表演的多姿多彩的中华传统舞蹈节目后，我的心态有了大幅度的转变，如果这样的中华文化传承是共产党口中的邪教，那么共产党自己又能是什么呢？后来我回国后又翻墙阅读了《九评共产党》的文章，字字句句都深刻揭示了共产党本质，给了我极大的震撼，让我深刻的意识到共产党对我们真正中国传统文化的残害是多么的严重，我现在身在邪党阵营中，只能.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718850.md#1" target="_blank">中国高校性丑闻不断 宁波大学副教授也出事</a><br></h3>继北京大学、上海财经大学教授曝出性丑闻后，宁波大学女生在网上举报遭该校副教授性骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717889.md#1" target="_blank">长期熬夜写作业 河南小学生险失明</a><br></h3>近日，河南焦作一名六年级女孩因眼球疼痛、眼睛没有光感而前往医院就医。医生诊断为急性视神经网膜炎。据女孩的家长介绍，女孩因做作业慢，长期熬夜，一天只睡6个小时。经过治疗，女孩的视力恢复到1.0。医生建议，学校布置作业的量要适当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:06 PM							</td></tr>
