--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -6,6 +6,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723163.md#1" target="_blank">深度睡眠有1个秘诀 脑神经医师教你一夜好眠</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723163.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sleep2_627054728-150x120.jpg" align ="left"></a>良好的睡眠品质不仅能增加精神与专注力，还能预防心血管疾病与癌症。但很多人可能不知道自己睡得好不好，或是不晓得如何提升睡眠品质。怎样才能让自己拥有良好的深度睡眠？深度睡眠能让人体恢复能量、增强免疫系统。进入深眠的条件是褪黑激素分泌量高及低体温。褪黑激素在深夜3点到6点分泌量达到最高，此时体温最低，因此可达到深眠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/16/n11592972.md#1" target="_blank">哪些疾病影响移民美国？6QA看懂移民体检</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/16/n11592972.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_285846455-150x120.jpg" align ="left"></a>移民体检（Immigration Medical Examination）是移民美国必须经过的一道程序。根据美国移民法，要申请绿卡，必须通过移民体检，而且做移民体检的医生（civil surgeons）必须是移民局批准认证的医生，移民局才会承认体检结果。移民体检都要检查哪些内容？哪些类型的疾病会影响移民申请？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727208.md#1" target="_blank">惊艳而令人着迷的波斯美食</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727208.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/JWU_3138-150x120.jpg" align ="left"></a>传统的波斯菜对大多数华人来说可能略感陌生。然而，生活在温哥华，就享有了这样的便利，尝尽天下美食。笔者近日在温哥华一家新开张的波斯餐厅，第一次体验波斯菜。实在出人意料，被国人视为贵重香料的藏红花，竟然是波斯菜系的日常餐调料，令人神清气爽。波斯美食，就是伊朗的传统美食，虽然他们的料理方式跟其他中东国家有相似之处，但是更精致.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:52 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank">手工艺术大荟萃 德国圣诞市场上的精品</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728647.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/76ed2d990a39fbaf949cba916f035e7f-150x120.jpg" align ="left"></a>俗话说，会看的看门道。要说德国圣诞市场上值得保存的精品，就属那些精致独特的手工艺品了。今天我们就来稍作盘点，当然一定会挂一漏万，因为德国的手工艺品实在很丰富，我们就先从最著名的木制手工艺生产基地——埃尔茨山区开始介绍吧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank">用1个枕头就能做的燃脂运动！一边看电视一边瘦</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/pillow-fitness-44-150x120.jpg" align ="left"></a>圣诞节、元旦、农历新年??随着冬季到来，一个又一个的节假日接踵而至。每天辛苦工作，放假最想做的就是躺在沙发上看电视、大啖美食犒赏自己，不过又怕多吃少动会变胖。不妨趁着看电视的时间，用一个枕头做简单的燃脂运动。不用花大钱去健身房、买健身器材，世界健身俱乐部（World Gym）教练Xin教你边看电视就能边瘦身。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank">他从画里跑出来？摄影师苦心守候拍出奇妙佳作</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/30d201aec61204b1951d0fa2ce955cf0-150x120.jpg" align ="left"></a>游客到美术馆大多是为了欣赏艺术品而来的，但奥地利摄影师斯蒂芬?德拉桑（Stefan Draschan）和别人不一样；他却是为了欣赏 艺术品的游客而来的，他这一系列别有风味的作品，看起来即奇妙又有趣！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank">搭乘全球第一架无塑班机 喝完咖啡也要吃掉咖啡杯</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5a9fa6784eeb19b61df8f3f6ce447b13-150x120.jpg" align ="left"></a>如果你搭乘新西兰航空（Air New Zealand），端上来一杯香醇的咖啡时，空服员可能会告诉你，喝完咖啡，可以的话，请一起把咖啡杯吃掉吧！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:11 PM			</td></tr>
@@ -52,6 +53,5 @@ Jason .........<br><img align="bottom" src="http://www.epochtimes.com/assets/the
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710365.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】2020年珀斯5个投资热点</a><br></h3>根据多家房地产投资专家分析，2020年珀斯房地产市场将迎来微小的涨幅，房产中位价的涨幅可能低于2%。然而，租房市场异常活跃，珀斯平均租金涨幅为5.7%，创下近3年来的最佳表现。本期专栏，我们以租金收入回报率为准，分析珀斯5个2020年最值得投资的地区。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710336.md#1" target="_blank">西澳政府注资1.5亿澳元刺激房市</a><br></h3>作为推动经济的一个部分，西澳政府融资1.5亿澳元用以社会福利房。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710283.md#1" target="_blank">西澳南珀斯塔楼项目终获批</a><br></h3>经过了一年法庭调解与开发方案的修正，本地开发商Sirona Capital拟在南珀斯承建大型公寓项目的开发申请终于获批，日前，开发商开启了楼花预售营销活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:07 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710164.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】西澳政府拟推共管物业经理新政 提高行业公信力</a><br></h3>对于日益增加的共管物业，西澳政府有意推行新的政策，以规范管理共管物业的行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
