--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -22,7 +22,14 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721707.md#1" target="_blank">陈思敏：中共“六稳”就业最不稳</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/334780_medium-150x120.jpg" align ="left"></a>中共中央经济工作会议12日闭幕，会议设定明年任务最高目标仍是“六稳”，而六稳之首的就业，在这次会后文件中显示，高于其他五稳一共四处被提及，也打破了去年的三提纪录。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721511.md#1" target="_blank">颜丹：中共搞金钱外交的结局</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-613191992-600x400-150x120.jpg" align ="left"></a>中共在外交上一败涂地，说到底，与其对金钱的认知有极大关联。中共惟利是图，为了利益不折手段，就以为所有人都跟它一样。金钱能收买人心，但却很难臣服人心。能臣服人心的惟有德与善。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720605.md#1" target="_blank">严晓：也谈家国教育</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720605.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1602140650092603-150x120.jpg" align ="left"></a>香港人六个月以来的民主抗争运动令全世界对运动的中坚分子——香港青少年刮目相看，也令中共及其傀儡和走狗们始料不及，惊惶失措，他们将肇因诿于香港学校“对青少年家国教育不足”。一篇在内地“爱党爱国”网民们中流传甚广的文章甚至由此得出结论：香港青年缺乏历史常识，所以反中乱港；大陆青年历史常识丰富，所以爱党爱国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720459.md#1" target="_blank">海风：中国官场迎来“辞职潮”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720459.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/01/1401182039212039-150x120.jpg" align ="left"></a>继富豪移民潮、资金外逃潮、民企倒闭潮、外企脱逃潮、网贷平台爆雷潮、房企倒闭潮、员工失业潮、民工返乡潮、银行倒闭潮之后，中国又迎来了一波官场“辞职潮”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:53 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725609.md#1" target="_blank">祝君安：中美贸易谈判随感</a><br></h3>不情不愿，半推半就
+敬酒不吃，罚酒噎喉
+灰犀牛顶，黑天鹅愁
+全面脱钩，严冬寒透
+忍痛改革，官民双收
+情系苍生，神佛保佑
+抱残守缺，身败名丢
+天堂地狱，二者孰优......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724960.md#1" target="_blank">东方觉：克拉玛依火灾与泰坦尼克号水难</a><br></h3>12月8日，是新疆克拉玛依市友谊馆火灾25周年祭日。
 
 每当我想起新疆克拉玛依火灾时，“泰坦尼克”号水难也同在脑中浮现。两种场面，水与火的交织，挥之不去。在灾难面前，人性与兽性经纬分明，令人悲哀，令人感叹，令人内心难以平静……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:35 PM			</td></tr>
