--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -32,7 +32,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/30/n11691911.md#1" target="_blank">善听雷音的“铁罗汉”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/30/n11691911.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/arhat-in-meditation-1-150x120.jpg" align ="left"></a>僧人忽然跳到舟上，瞬间身体缩成一尺长，向众人拱手，说了一声：“珍重！”，就随着驰骋的风帆漂流而去。当一阵鼓声大震，众人再一看，已经不见僧人踪影。回首看看几案上的盘杯，也全都消失了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709373.md#1" target="_blank">天地清明引(132) 东流水－大疫横行1</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709373.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/Fotolia_22324167_Subscription_L-150x120.jpg" align ="left"></a>兵部军营已有一人染病毙命，王城发全城戒严通告，一时之间，偌大的繁华之地，死寂一片。王庭各院早已闭门，太监宫女按太医指示，熏艾撒醋。礼部按照典籍记载，行祭天大典，以安王命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711594.md#1" target="_blank">试着说爱</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_43183494_Subscription_L-150x120.jpg" align ="left"></a>把爱说出口，并不是那么困难。时常把爱挂在嘴边，必定能促进家人之间的关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:39 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank">青松絮语：免费理发</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/kite-150x120.jpg" align ="left"></a>拖着厚重的面子，我们畏首畏尾，对正常的社会交换也感到胆怯。如果抛却那种种顾虑，坦坦荡荡面对一切，既能真诚待人，又能豁达行事，对“免费理发”这样的事也不心生排斥，岂不是更好吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718727.md#1" target="_blank">歌词：这里，那里</a><br></h3>善在眼睛里， 海在胸怀里， 山在脊梁里， 天在心空里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713632.md#1" target="_blank">五绝：善语慈心</a><br></h3>法指瑶台路，迷红万丈渊。 心明离桎梏，神舵度流年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711043.md#1" target="_blank">七律：意</a><br></h3>不忍严冬萧瑟漫， 细寻生意踏冰河。 多情垂柳摇金发， 沉默杉松耸玉柯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716173.md#1" target="_blank">五律：黄昏</a><br></h3>寒鼓夕阳阔，落霞天际悠。 飞鸿成一点，逝景合长流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:33 PM			</td></tr>
