--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -7,23 +7,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/20/n11601191.md#1" target="_blank">组图：法轮功纽约布鲁克林游行  震撼人心</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/20/n11601191.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/LD70759-150x120.jpg" align ="left"></a>“金秋送福撒甘露，大法弟子有真相”，在全球退党大潮达三亿四千万人退出中共党、团、队之际，20日（周日）纽约近千名法轮功学员在布鲁克林八大道繁华街区举行盛大游行，十几个方阵延绵十多条街区，彩旗花船、龙腾狮舞、军乐锣鼓，正气威震八方。壮观的游行再一次将法轮大法的美好带给布鲁克林民众。
 
 游行从八大道68街前往42街，历时2个小时，浩浩荡荡的队伍展示上百条中英.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 7:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/13/n11585891.md#1" target="_blank">洛杉矶真相长城 贺3.4亿人摒弃中共</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/13/n11585891.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/10-1-1-150x120.jpg" align ="left"></a>
-
-【大纪元2019年10月14日讯】（大纪元记者姜琳达洛杉矶圣盖博市报导）随着中共打压香港自由民主、暴力对待港人的行为不断被曝光后，越来越多的年轻人也意识到中共的残暴。10月12日（星期六），就有大陆年轻人在洛杉矶法轮功学员举行的真相长城现场，加入全球退出中共党、团、队组织的大潮。
-
-
-
-
-
-
-
-
-
-
-
-
-
-周六上午，大洛杉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/17/n11661177.md#1" target="_blank">每日三退声明精选（2019/11/16）</a><br></h3>曾留学多年返回国内，有比较才知道透明的西方是充满人性的社会，而国内一切都是暗黑，在一党独裁专制下遍地腐败，道德全面堕落，根源就是这个党。现有身边明白人指点翻墙，特此声明，退出被拉入的所谓共青团和曾加入的所谓少先队。做中华儿女，不做马列子孙。天佑平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/15/n11657048.md#1" target="_blank">每日三退声明精选（2019/11/14）</a><br></h3>在全球关注香港人民捍卫民主自由运动的时刻，我们越来越看清了中共的邪恶。回想到八九六四及镇压法轮功，中共使用的一切镇压手段如出一辙。一个政府，一个政权靠谎言、欺骗等流氓手段镇压正义与良知，这在历史上是绝无仅有的...... 。我们不与邪恶为伍，退出年少时期加入的少先队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 10:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/14/n11654455.md#1" target="_blank">每日三退声明精选（2019/11/13）</a><br></h3>被中共长期欺骗、高压管控的国民，从未真正地拥有过面包和自由。吃一口饭却要交半口税，透支几代人的积蓄才买得起的房产，70年后却很可能成为中共“国有”。好不容易成了富豪，也得向中共俯首称臣，接受其管控。德利看透了邪党的流氓邪教本质，在此宣誓退出邪党的共青团和少先队组织不给邪党陪葬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/13/n11652084.md#1" target="_blank">每日三退声明精选（2019/11/12）</a><br></h3>郑重声明：从今日起退出曾经在中共加入过的少先队和共青团组织，了解到中共邪党腐败透顶，欺压百姓，香港事件更暴露其残暴嘴脸，自愿退出邪党的所有组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 12:26 PM							</td></tr>
