--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -22,16 +22,6 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721707.md#1" target="_blank">陈思敏：中共“六稳”就业最不稳</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/334780_medium-150x120.jpg" align ="left"></a>中共中央经济工作会议12日闭幕，会议设定明年任务最高目标仍是“六稳”，而六稳之首的就业，在这次会后文件中显示，高于其他五稳一共四处被提及，也打破了去年的三提纪录。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721511.md#1" target="_blank">颜丹：中共搞金钱外交的结局</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-613191992-600x400-150x120.jpg" align ="left"></a>中共在外交上一败涂地，说到底，与其对金钱的认知有极大关联。中共惟利是图，为了利益不折手段，就以为所有人都跟它一样。金钱能收买人心，但却很难臣服人心。能臣服人心的惟有德与善。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720605.md#1" target="_blank">严晓：也谈家国教育</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720605.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1602140650092603-150x120.jpg" align ="left"></a>香港人六个月以来的民主抗争运动令全世界对运动的中坚分子——香港青少年刮目相看，也令中共及其傀儡和走狗们始料不及，惊惶失措，他们将肇因诿于香港学校“对青少年家国教育不足”。一篇在内地“爱党爱国”网民们中流传甚广的文章甚至由此得出结论：香港青年缺乏历史常识，所以反中乱港；大陆青年历史常识丰富，所以爱党爱国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725637.md#1" target="_blank">袁斌：段子里的中国乱象入木三分</a><br></h3>一部手机丢失了，一群相好惊呆了：不是心疼，是心慌。一个贪官进去了，一帮朋友傻眼了：不是为他，是为己。一个领导艾滋了，一堆妇女乱套了：不是咋治，是咋办？一个情人翻脸了，一批干部想自杀：不是想死，是怕抓！一个老人摔倒了，一个国家纠结了：不是不扶，是不敢。一个校长被捕了，一批校长显形了：不是无能，是无德。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725621.md#1" target="_blank">云鹤天：世人明真相</a><br></h3>法轮功女学员
-向世人讲真相
-一名过路男子
-掏出手机照像
-学员穿羽绒服
-帽子罩在头上
-男子肆无忌惮
-靠近学员脸庞
-学员严辞喝止......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725609.md#1" target="_blank">祝君安：中美贸易谈判随感</a><br></h3>不情不愿，半推半就
 敬酒不吃，罚酒噎喉
 灰犀牛顶，黑天鹅愁
@@ -76,5 +66,7 @@
 
 贼喊捉贼张口来，倒打一耙闭口拽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722314.md#1" target="_blank">王赫 ：中美协议 川普又拉习近平一把</a><br></h3>12月13日，中美双方分别宣布达成第一阶段贸易协议。在胡搅蛮缠、撒泼、倒打一耙等等手段使尽，均告无效之后，中共终于被美国赶上了路。这再次证明，跟中共光讲道理是没有用的，必须有实质的压力，这时中共才会来认认“道理”这两个字是怎么写的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:59 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720355.md#1" target="_blank">程晓容：《时代》2019风云人物为何引争议</a><br></h3>日前，美国《时代》周刊2019年度风云人物的结果招来许多批评，因为入围的香港抗争者群体获得了2700万投票者的30%的选票，远超第二名 4.5%的得票率。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 8:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720569.md#1" target="_blank">胥志义：能用剌刀和鞭子强迫人民共产和公有吗？</a><br></h3>中国左派与西方左派并不相同。虽然左派多以代表底层民众利益自居，但西方左派帮助穷人，中国左派则打击富人；西方左派也主张富人多缴税以救济穷人，却不反对富人致富，中国左派则反对富人致富，认为这是穷人穷的原因；西方左派也要借助政府政策帮助穷人（如福利政策），中国左派则鼓吹国家对富人实行专政；西方左派与右派之争只是政策之争，中国.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
